trabalhando no sobre

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfólio</title>
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/sobre.css">
 </head>
 <body>
     <header>
@@ -46,7 +47,14 @@
 
     <main>
         <section id="sobre">
-
+            <div class="container">
+                <img id="foto-perfil" src="./img/foto-perfil.png" alt="Foto de perfil" >
+                <div>
+                    <h2>Jacinto Bengui</h2>
+                    <h3>Desenvolvedor .NET</h3>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed et recusandae excepturi dicta quae doloribus consectetur, accusantium consequatur eaque obcaecati, quisquam libero quibusdam. Commodi debitis quasi sequi! At, optio sit.</p>
+                </div>
+            </div>
         </section>
 
         <section id="projetos">
