trabalhando no sobre: preenchendo infos

--- a/index.html
+++ b/index.html
@@ -49,12 +49,34 @@
         <section id="sobre">
             <div class="container">
                 <img id="foto-perfil" src="./img/foto-perfil.png" alt="Foto de perfil" >
-                <div>
-                    <h2>Jacinto Bengui</h2>
-                    <h3>Desenvolvedor .NET</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed et recusandae excepturi dicta quae doloribus consectetur, accusantium consequatur eaque obcaecati, quisquam libero quibusdam. Commodi debitis quasi sequi! At, optio sit.</p>
-                </div>
+                
+                <div class="info">
+                    <div>
+                        <h2>Jacinto Bengui</h2>
+                        <h3>Desenvolvedor .NET</h3>
+                        <p>Técnico de Gestão de Sistemas Informáticos formado no  Instituto Politécnico Industrial de
+                        Luanda (IPIL)</p>
+                    </div>
+
+                    <div>
+                        <h3>Tecnologias e Habilidades</h3>
+                        <ul class="habilidades">
+                            <li> C-Sharp (C#)</li>
+                            <li>ASP.NET</li>
+                            <li> Window Forms</li>
+                            <li>HTML, CSS e JS - Básico</li>
+                            <li></li>
+                            <li>Entity Framework</li>
+                            <li>Dapper</li>
+                            <li>SQL Server, MySQL, SQLite</li>
+                            <li></li>
+                            <li>Git e GitHub</li>
+                            <li>Docker</li>
+                        </ul>
+                    </div>
+                </div>    
             </div>
+
         </section>
 
         <section id="projetos">
