trabalhando no sobre: preenchendo infos 3

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/sobre.css">
+    <link rel="stylesheet" href="./styles/projetos.css">
 </head>
 <body>
     <header>
@@ -80,7 +81,36 @@
         </section>
 
         <section id="projetos">
-
+            <div class="card">
+                <img src="./img/foto-perfil.png" alt="">
+                <div class="card-description">
+                    <h3>Projeto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tempore amet reprehenderit voluptatibus ea esse! Iste iure dolorem ipsum? Nihil omnis possimus earum eos explicabo repellendus maiores suscipit, iusto incidunt.</p>
+                    <button>
+                        Visitar Projeto
+                    </button>
+                </div>
+                </div>
+            <div class="card">
+                <img src="./img/foto-perfil.png" alt="">
+                <div class="card-description">
+                    <h3>Projeto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tempore amet reprehenderit voluptatibus ea esse! Iste iure dolorem ipsum? Nihil omnis possimus earum eos explicabo repellendus maiores suscipit, iusto incidunt.</p>
+                    <button>
+                        Visitar Projeto
+                    </button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./img/foto-perfil.png" alt="">
+                <div class="card-description">
+                    <h3>Projeto 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos tempore amet reprehenderit voluptatibus ea esse! Iste iure dolorem ipsum? Nihil omnis possimus earum eos explicabo repellendus maiores suscipit, iusto incidunt.</p>
+                    <button>
+                        Visitar Projeto
+                    </button>
+                </div>
+            </div>
         </section>
 
         <section id="contacto">
