Adicionando links dos github repo

--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
                 </div>
                 <h3 id="modal-nome">Assistente IA para Jogos</h3>
                 <p id="modal-descricao">Aplicativo integrado a Gemini IA do Google para fornecer informações sobre jogos </p>
-                <a href="#">Visitar repositório GitHub</a>
-                <button class="close-modal" data-modal="app-ia"></button>
+                <a id="modal-github-btn" href="#" target="_blank">Visitar repositório GitHub</a>
+                <button class="close-modal fa-solid fa-xmark" data-modal="app-ia">
+                </button>
             </div>
         </dialog>
 
